--- a/src/app/components/toastr/toastr.component.html
+++ b/src/app/components/toastr/toastr.component.html
@@ -1,1 +1,8 @@
-<button type="button" class="btn btn-success" (click)="successToastr()">Success</button>
+<div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+  <div class="btn-group mr-2" role="group" aria-label="First group">
+    <button type="button" class="btn btn-success" (click)="successToastr()">Success</button>
+    <button type="button" class="btn btn-danger" (click)="errorToastr()">Error</button>
+    <button type="button" class="btn btn-warning" (click)="warningToastr()">Warning</button>
+    <button type="button" class="btn btn-info" (click)="infoToastr()">Info</button>
+  </div>
+</div>
